projects/vb6parse/snapshots/tests/library/financial/mirr/mirr_concatenation.snap
---
source: projects/vb6parse/tests/library/financial/mirr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: DimStatement
      children:
        - kind: DimKeyword
          text: Dim
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: report
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringKeyword
          text: String
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: report
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: BinaryExpression
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"Return: \""
                - kind: Whitespace
                  text: " "
                - kind: Ampersand
                  text: "&"
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: Format
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: BinaryExpression
                              children:
                                - kind: CallExpression
                                  children:
                                    - kind: Identifier
                                      text: MIRR
                                    - kind: LeftParenthesis
                                      text: (
                                    - kind: ArgumentList
                                      children:
                                        - kind: Argument
                                          children:
                                            - kind: CallExpression
                                              children:
                                                - kind: Identifier
                                                  text: cashFlows
                                                - kind: LeftParenthesis
                                                  text: (
                                                - kind: ArgumentList
                                                  children: []
                                                - kind: RightParenthesis
                                                  text: )
                                        - kind: Comma
                                          text: ","
                                        - kind: Whitespace
                                          text: " "
                                        - kind: Argument
                                          children:
                                            - kind: NumericLiteralExpression
                                              children:
                                                - kind: SingleLiteral
                                                  text: "0.08"
                                        - kind: Comma
                                          text: ","
                                        - kind: Whitespace
                                          text: " "
                                        - kind: Argument
                                          children:
                                            - kind: NumericLiteralExpression
                                              children:
                                                - kind: SingleLiteral
                                                  text: "0.05"
                                    - kind: RightParenthesis
                                      text: )
                                - kind: Whitespace
                                  text: " "
                                - kind: MultiplicationOperator
                                  text: "*"
                                - kind: Whitespace
                                  text: " "
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: IntegerLiteral
                                      text: "100"
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"0.00\""
                    - kind: RightParenthesis
                      text: )
            - kind: Whitespace
              text: " "
            - kind: Ampersand
              text: "&"
            - kind: Whitespace
              text: " "
            - kind: StringLiteralExpression
              children:
                - kind: StringLiteral
                  text: "\"%\""
        - kind: Newline
          text: "\n"
